마이페이지

--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -4,23 +4,12 @@
 @use 'breakpoints';
 
 // myshop
-.myshop {
-	input[type='radio'] {
-		width: 15px;
-		height: 15px;
-		&:before,
-		&:after {
-			display: none;
-		}
-		& + label {
-			font-size: inherit;
-		}
-	}
 
+.myshop {
+	padding: 0 3.37vw;
 	.myshop__container {
-		max-width: calc(1280px + 3.37vw);
+		max-width: 1280px;
 		margin: 0 auto;
-		padding: 0 3.37vw;
 	}
 	.myshop__container--main {
 		max-width: none;
@@ -233,14 +222,21 @@
 		display: flex;
 		gap: 10px;
 		position: relative;
-		.myshop__articles {
+		> div {
 			flex: 1;
 		}
-		.myshop__sticky {
-			position: sticky;
-			top: 0;
-			width: 429px;
-			align-self: flex-start;
+		.myshop__aside {
+			flex: 0 0 auto;
+			.myshop__roundbox {
+				width: 360px;
+			}
+			.myshop__roundbox--user {
+				width: 469px;
+			}
+		}
+		.myshop__short {
+			max-width: 910px;
+			margin-right: 370px;
 		}
 	}
 	.myshop__article {
@@ -317,6 +313,35 @@
 		.button {
 			&:not(:first-child) {
 				margin-top: 13px;
+			}
+		}
+	}
+	.myshop__roundbox--mileage {
+		.myshop__header {
+			align-items: center;
+			margin-bottom: 60px;
+			.myshop__ico {
+				margin-left: 8px;
+				@include icons.retina-sprite(icons.$ico-myshop-mileage-group);
+			}
+		}
+
+		.board {
+			.board__board {
+				.board__tr {
+					min-height: 0;
+					padding: 0;
+					&:first-child {
+						margin-bottom: 34px;
+						.board__right {
+							font-weight: 600;
+							font-size: 32px;
+						}
+					}
+				}
+				.board__right {
+					font-size: 14px;
+				}
 			}
 		}
 	}
@@ -738,6 +763,61 @@
 		}
 	}
 
+	.table-detail {
+		letter-spacing: -0.025em;
+		&:not(:first-child) {
+			margin-top: 40px;
+		}
+		@include mixins.PtdRegular();
+		.table-detail__thead {
+			margin-bottom: 40px;
+		}
+		.table-detail__tfoot {
+			margin-top: 40px;
+			padding-top: 30px;
+			border-top: 1px solid #000;
+		}
+		.table-detail__tr {
+			display: flex;
+			&:not(:first-child) {
+				margin-top: 40px;
+			}
+		}
+		.table-detail__tr--right {
+			justify-content: flex-end;
+		}
+		.table-detail__th {
+			padding-right: 15px;
+			font-weight: 500;
+			text-align: center;
+		}
+		.table-detail__td {
+			padding-right: 15px;
+			font-size: 18px;
+			text-align: center;
+		}
+		.table-detail__left {
+			text-align: left;
+		}
+		.table-detail__20 {
+			width: 20%;
+		}
+		.table-detail__flex {
+			flex: 1;
+		}
+		.table-detail__total {
+			display: flex;
+			align-items: baseline;
+			font-weight: 500;
+			font-size: 24px;
+			.table-detail__unit {
+				margin-right: 10px;
+				font-weight: 600;
+				font-size: 14px;
+			}
+		}
+	}
+
 	.review__sort {
 		position: relative;
 		flex: 1;
@@ -821,6 +901,9 @@
 		margin-top: 20px;
 		align-items: center;
 		justify-content: center;
+		&:not(:last-child) {
+			margin-bottom: 60px;
+		}
 		.btn__prev, .btn__next {
 			display: inline-block;
 			width: 43px;
@@ -863,6 +946,18 @@
 		}
 	}
 
+	input[type='radio'] {
+		width: 15px;
+		height: 15px;
+		&:before,
+		&:after {
+			display: none;
+		}
+		& + label {
+			font-size: inherit;
+		}
+	}
+
 	@include breakpoints.mobile() {
 		.myshop__header {
 			margin-bottom: 15px;
@@ -873,8 +968,7 @@
 		}
 		.myshop__row {
 			flex-direction: column-reverse;
-			.myshop__sticky {
-				position: static;
+			.myshop__aside {
 				width: 100%;
 			}
 		}
@@ -947,6 +1041,31 @@
 				}
 			}
 		}
+		.myshop__roundbox--mileage {
+			.myshop__header {
+				margin-bottom: 33px;
+				.myshop__ico {
+					margin-left: 6px;
+					@include mixins.sprite(mo_icons.$ico-myshop-mileage);
+				}
+			}
+
+			.board {
+				.board__board {
+					.board__tr {
+						&:first-child {
+							margin-bottom: 17px;
+							.board__right {
+								font-size: 20px;
+							}
+						}
+					}
+					.board__right {
+						line-height: 22px;
+					}
+ 				}
+			}
+		}
 
 		.filter {
 			margin-bottom: 16px;
@@ -1010,6 +1129,7 @@
 
 		.tab {
 			margin-bottom: 26px;
+			overflow-x: auto;
 			.tab__item {
 				&:not(:first-child) {
 					margin-left: 13px;
@@ -1019,6 +1139,7 @@
 				font-weight: 500;
 				font-size: 18px;
 				letter-spacing: -0.012em;
+				white-space: nowrap;
 			}
 		}
 
@@ -1213,6 +1334,15 @@
 					order: 2;
 					margin-top: 6px;
 				}
+			}
+		}
+
+		.table-detail {
+			&:not(:first-child) {
+
+			}
+			.table-detail__thead {
+				display: none;
 			}
 		}
 	}
